{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 58,
  "lineage": "271d9d5f-7c8d-5c06-0c53-bfff37c3a44b",
  "resources": [
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "testvmnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/networkInterfaces/tfdemo-ce-testvm-nic",
            "internal_domain_name_suffix": "1jmwm0xhtbxuhj1pvi2cwflhqg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testvmip",
                "primary": true,
                "private_ip_address": "10.178.6.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/publicIPAddresses/tfdemo-ce-vmpublicip",
                "subnet_id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-transit-vnet/subnets/tfdemo-ce-testvmsubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "60-45-BD-9D-7C-22",
            "name": "tfdemo-ce-testvm-nic",
            "private_ip_address": "10.178.6.4",
            "private_ip_addresses": [
              "10.178.6.4"
            ],
            "resource_group_name": "adb-transit-tfdemo-ce-rg",
            "virtual_machine_id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Compute/virtualMachines/tfdemo-cevm"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_public_ip.testvmpublicip",
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.azurerm_subnet.testvmsubnet",
            "module.adb-with-private-link-standard.azurerm_virtual_network.transit_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "testvmnsgassoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/networkInterfaces/tfdemo-ce-testvm-nic|/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-ce-testvm-nsg",
            "network_interface_id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/networkInterfaces/tfdemo-ce-testvm-nic",
            "network_security_group_id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-ce-testvm-nsg"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_network_interface.testvmnic",
            "module.adb-with-private-link-standard.azurerm_network_security_group.testvm-nsg",
            "module.adb-with-private-link-standard.azurerm_public_ip.testvmpublicip",
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.azurerm_subnet.testvmsubnet",
            "module.adb-with-private-link-standard.azurerm_virtual_network.transit_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "dp_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-ce-dp-nsg",
            "location": "westeurope",
            "name": "tfdemo-ce-dp-nsg",
            "resource_group_name": "adb-dp-tfdemo-ce-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "AzureActiveDirectory",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowAAD-dp",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "AzureFrontDoor.Frontend",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowAzureFrontDoor-dp",
                "priority": 201,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker communication with Azure Eventhub services.",
                "destination_address_prefix": "EventHub",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9093",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-eventhub",
                "priority": 103,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker nodes communication within a cluster.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-inbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker nodes communication within a cluster.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-outbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Azure SQL services.",
                "destination_address_prefix": "Sql",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-sql",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Azure Storage services.",
                "destination_address_prefix": "Storage",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-storage",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "Testing",
              "Epoch": "1qmke8",
              "Owner": "sagar.shinde@cloudethix.com"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.dp_rg",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "testvm-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-ce-testvm-nsg",
            "location": "westeurope",
            "name": "tfdemo-ce-testvm-nsg",
            "resource_group_name": "adb-transit-tfdemo-ce-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "13.81.109.23",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "106.51.36.23"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "Testing",
              "Epoch": "1qmke8",
              "Owner": "sagar.shinde@cloudethix.com"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "transit_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-ce-transit-nsg",
            "location": "westeurope",
            "name": "tfdemo-ce-transit-nsg",
            "resource_group_name": "adb-transit-tfdemo-ce-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "AzureActiveDirectory",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowAAD-transit",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "AzureFrontDoor.Frontend",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowAzureFrontDoor-transit",
                "priority": 201,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker communication with Azure Eventhub services.",
                "destination_address_prefix": "EventHub",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9093",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-eventhub",
                "priority": 103,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker nodes communication within a cluster.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-inbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker nodes communication within a cluster.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-outbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Azure SQL services.",
                "destination_address_prefix": "Sql",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-sql",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Azure Storage services.",
                "destination_address_prefix": "Storage",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-storage",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "Testing",
              "Epoch": "1qmke8",
              "Owner": "sagar.shinde@cloudethix.com"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "dp_aad",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "AzureActiveDirectory",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-ce-dp-nsg/securityRules/AllowAAD-dp",
            "name": "AllowAAD-dp",
            "network_security_group_name": "tfdemo-ce-dp-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "adb-dp-tfdemo-ce-rg",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_network_security_group.dp_sg",
            "module.adb-with-private-link-standard.azurerm_resource_group.dp_rg",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "dp_azfrontdoor",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "AzureFrontDoor.Frontend",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-ce-dp-nsg/securityRules/AllowAzureFrontDoor-dp",
            "name": "AllowAzureFrontDoor-dp",
            "network_security_group_name": "tfdemo-ce-dp-nsg",
            "priority": 201,
            "protocol": "Tcp",
            "resource_group_name": "adb-dp-tfdemo-ce-rg",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_network_security_group.dp_sg",
            "module.adb-with-private-link-standard.azurerm_resource_group.dp_rg",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "test0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "13.81.109.23",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-ce-testvm-nsg/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "tfdemo-ce-testvm-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "adb-transit-tfdemo-ce-rg",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "106.51.36.23"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_network_security_group.testvm-nsg",
            "module.adb-with-private-link-standard.azurerm_public_ip.testvmpublicip",
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.data.http.my_public_ip",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "transit_aad",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "AzureActiveDirectory",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-ce-transit-nsg/securityRules/AllowAAD-transit",
            "name": "AllowAAD-transit",
            "network_security_group_name": "tfdemo-ce-transit-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "adb-transit-tfdemo-ce-rg",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_network_security_group.transit_sg",
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "transit_azfrontdoor",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "AzureFrontDoor.Frontend",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-ce-transit-nsg/securityRules/AllowAzureFrontDoor-transit",
            "name": "AllowAzureFrontDoor-transit",
            "network_security_group_name": "tfdemo-ce-transit-nsg",
            "priority": 201,
            "protocol": "Tcp",
            "resource_group_name": "adb-transit-tfdemo-ce-rg",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_network_security_group.transit_sg",
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "testvmpublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/publicIPAddresses/tfdemo-ce-vmpublicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.81.109.23",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "tfdemo-ce-vmpublicip",
            "resource_group_name": "adb-transit-tfdemo-ce-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "cust1_dp_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.179.1.128/26"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "databricks",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-dp-vnet/subnets/cust1-tfdemo-ce-dp-private",
            "name": "cust1-tfdemo-ce-dp-private",
            "private_endpoint_network_policies": "Enabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "adb-dp-tfdemo-ce-rg",
            "virtual_network_name": "tfdemo-ce-dp-vnet"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.dp_rg",
            "module.adb-with-private-link-standard.azurerm_virtual_network.dp_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "cust1_dp_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.179.1.64/26"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "databricks",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-dp-vnet/subnets/cust1-tfdemo-ce-dp-public",
            "name": "cust1-tfdemo-ce-dp-public",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "adb-dp-tfdemo-ce-rg",
            "virtual_network_name": "tfdemo-ce-dp-vnet"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.dp_rg",
            "module.adb-with-private-link-standard.azurerm_virtual_network.dp_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dp_plsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.179.0.128/26"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-dp-vnet/subnets/tfdemo-ce-dp-privatelink",
            "name": "tfdemo-ce-dp-privatelink",
            "private_endpoint_network_policies": "Enabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "adb-dp-tfdemo-ce-rg",
            "virtual_network_name": "tfdemo-ce-dp-vnet"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.dp_rg",
            "module.adb-with-private-link-standard.azurerm_virtual_network.dp_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dp_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.179.0.64/26"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "databricks",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-dp-vnet/subnets/tfdemo-ce-dp-private",
            "name": "tfdemo-ce-dp-private",
            "private_endpoint_network_policies": "Enabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "adb-dp-tfdemo-ce-rg",
            "virtual_network_name": "tfdemo-ce-dp-vnet"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.dp_rg",
            "module.adb-with-private-link-standard.azurerm_virtual_network.dp_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dp_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.179.0.0/26"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "databricks",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-dp-vnet/subnets/tfdemo-ce-dp-public",
            "name": "tfdemo-ce-dp-public",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "adb-dp-tfdemo-ce-rg",
            "virtual_network_name": "tfdemo-ce-dp-vnet"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.dp_rg",
            "module.adb-with-private-link-standard.azurerm_virtual_network.dp_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "testvmsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.178.6.0/23"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-transit-vnet/subnets/tfdemo-ce-testvmsubnet",
            "name": "tfdemo-ce-testvmsubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "adb-transit-tfdemo-ce-rg",
            "virtual_network_name": "tfdemo-ce-transit-vnet"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.azurerm_virtual_network.transit_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "transit_plsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.178.0.128/26"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-transit-vnet/subnets/tfdemo-ce-transit-privatelink",
            "name": "tfdemo-ce-transit-privatelink",
            "private_endpoint_network_policies": "Enabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "adb-transit-tfdemo-ce-rg",
            "virtual_network_name": "tfdemo-ce-transit-vnet"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.azurerm_virtual_network.transit_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "transit_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.178.0.64/26"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "databricks",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-transit-vnet/subnets/tfdemo-ce-transit-private",
            "name": "tfdemo-ce-transit-private",
            "private_endpoint_network_policies": "Enabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "adb-transit-tfdemo-ce-rg",
            "virtual_network_name": "tfdemo-ce-transit-vnet"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.azurerm_virtual_network.transit_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "transit_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.178.0.0/26"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "databricks",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-transit-vnet/subnets/tfdemo-ce-transit-public",
            "name": "tfdemo-ce-transit-public",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "adb-transit-tfdemo-ce-rg",
            "virtual_network_name": "tfdemo-ce-transit-vnet"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.azurerm_virtual_network.transit_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "cust1_dp_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-dp-vnet/subnets/cust1-tfdemo-ce-dp-private",
            "network_security_group_id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-ce-dp-nsg",
            "subnet_id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-dp-vnet/subnets/cust1-tfdemo-ce-dp-private"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_network_security_group.dp_sg",
            "module.adb-with-private-link-standard.azurerm_resource_group.dp_rg",
            "module.adb-with-private-link-standard.azurerm_subnet.cust1_dp_private",
            "module.adb-with-private-link-standard.azurerm_virtual_network.dp_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "cust1_dp_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-dp-vnet/subnets/cust1-tfdemo-ce-dp-public",
            "network_security_group_id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-ce-dp-nsg",
            "subnet_id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-dp-vnet/subnets/cust1-tfdemo-ce-dp-public"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_network_security_group.dp_sg",
            "module.adb-with-private-link-standard.azurerm_resource_group.dp_rg",
            "module.adb-with-private-link-standard.azurerm_subnet.cust1_dp_public",
            "module.adb-with-private-link-standard.azurerm_virtual_network.dp_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "dp_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-dp-vnet/subnets/tfdemo-ce-dp-private",
            "network_security_group_id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-ce-dp-nsg",
            "subnet_id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-dp-vnet/subnets/tfdemo-ce-dp-private"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_network_security_group.dp_sg",
            "module.adb-with-private-link-standard.azurerm_resource_group.dp_rg",
            "module.adb-with-private-link-standard.azurerm_subnet.dp_private",
            "module.adb-with-private-link-standard.azurerm_virtual_network.dp_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "dp_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-dp-vnet/subnets/tfdemo-ce-dp-public",
            "network_security_group_id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-ce-dp-nsg",
            "subnet_id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-dp-vnet/subnets/tfdemo-ce-dp-public"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_network_security_group.dp_sg",
            "module.adb-with-private-link-standard.azurerm_resource_group.dp_rg",
            "module.adb-with-private-link-standard.azurerm_subnet.dp_public",
            "module.adb-with-private-link-standard.azurerm_virtual_network.dp_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "transit_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-transit-vnet/subnets/tfdemo-ce-transit-private",
            "network_security_group_id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-ce-transit-nsg",
            "subnet_id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-transit-vnet/subnets/tfdemo-ce-transit-private"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_network_security_group.transit_sg",
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.azurerm_subnet.transit_private",
            "module.adb-with-private-link-standard.azurerm_virtual_network.transit_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "transit_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-transit-vnet/subnets/tfdemo-ce-transit-public",
            "network_security_group_id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-ce-transit-nsg",
            "subnet_id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-transit-vnet/subnets/tfdemo-ce-transit-public"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_network_security_group.transit_sg",
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.azurerm_subnet.transit_public",
            "module.adb-with-private-link-standard.azurerm_virtual_network.transit_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "dp_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.179.0.0/20"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "59b7c953-2283-411d-961a-b1347794c66d",
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-dp-vnet",
            "location": "westeurope",
            "name": "tfdemo-ce-dp-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "adb-dp-tfdemo-ce-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.179.0.0/26"
                ],
                "default_outbound_access_enabled": true,
                "delegation": [
                  {
                    "name": "databricks",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/join/action",
                          "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                          "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                        ],
                        "name": "Microsoft.Databricks/workspaces"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-dp-vnet/subnets/tfdemo-ce-dp-public",
                "name": "tfdemo-ce-dp-public",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-ce-dp-nsg"
              },
              {
                "address_prefixes": [
                  "10.179.0.128/26"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-dp-vnet/subnets/tfdemo-ce-dp-privatelink",
                "name": "tfdemo-ce-dp-privatelink",
                "private_endpoint_network_policies": "Enabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.179.0.64/26"
                ],
                "default_outbound_access_enabled": true,
                "delegation": [
                  {
                    "name": "databricks",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/join/action",
                          "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                          "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                        ],
                        "name": "Microsoft.Databricks/workspaces"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-dp-vnet/subnets/tfdemo-ce-dp-private",
                "name": "tfdemo-ce-dp-private",
                "private_endpoint_network_policies": "Enabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-ce-dp-nsg"
              },
              {
                "address_prefixes": [
                  "10.179.1.128/26"
                ],
                "default_outbound_access_enabled": true,
                "delegation": [
                  {
                    "name": "databricks",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/join/action",
                          "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                          "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                        ],
                        "name": "Microsoft.Databricks/workspaces"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-dp-vnet/subnets/cust1-tfdemo-ce-dp-private",
                "name": "cust1-tfdemo-ce-dp-private",
                "private_endpoint_network_policies": "Enabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-ce-dp-nsg"
              },
              {
                "address_prefixes": [
                  "10.179.1.64/26"
                ],
                "default_outbound_access_enabled": true,
                "delegation": [
                  {
                    "name": "databricks",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/join/action",
                          "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                          "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                        ],
                        "name": "Microsoft.Databricks/workspaces"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-dp-vnet/subnets/cust1-tfdemo-ce-dp-public",
                "name": "cust1-tfdemo-ce-dp-public",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-dp-tfdemo-ce-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-ce-dp-nsg"
              }
            ],
            "tags": {
              "Environment": "Testing",
              "Epoch": "1qmke8",
              "Owner": "sagar.shinde@cloudethix.com"
            }
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.dp_rg",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "transit_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.178.0.0/20"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6a6659da-98e7-436f-a76f-aa382b156786",
            "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-transit-vnet",
            "location": "westeurope",
            "name": "tfdemo-ce-transit-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "adb-transit-tfdemo-ce-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.178.0.0/26"
                ],
                "default_outbound_access_enabled": true,
                "delegation": [
                  {
                    "name": "databricks",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/join/action",
                          "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                          "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                        ],
                        "name": "Microsoft.Databricks/workspaces"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-transit-vnet/subnets/tfdemo-ce-transit-public",
                "name": "tfdemo-ce-transit-public",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-ce-transit-nsg"
              },
              {
                "address_prefixes": [
                  "10.178.0.128/26"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-transit-vnet/subnets/tfdemo-ce-transit-privatelink",
                "name": "tfdemo-ce-transit-privatelink",
                "private_endpoint_network_policies": "Enabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.178.0.64/26"
                ],
                "default_outbound_access_enabled": true,
                "delegation": [
                  {
                    "name": "databricks",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/join/action",
                          "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                          "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                        ],
                        "name": "Microsoft.Databricks/workspaces"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-transit-vnet/subnets/tfdemo-ce-transit-private",
                "name": "tfdemo-ce-transit-private",
                "private_endpoint_network_policies": "Enabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-ce-transit-nsg"
              },
              {
                "address_prefixes": [
                  "10.178.6.0/23"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/cd3b621d-1635-4710-aa89-8b5b654b5d29/resourceGroups/adb-transit-tfdemo-ce-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-ce-transit-vnet/subnets/tfdemo-ce-testvmsubnet",
                "name": "tfdemo-ce-testvmsubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ],
            "tags": {
              "Environment": "Testing",
              "Epoch": "1qmke8",
              "Owner": "sagar.shinde@cloudethix.com"
            }
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    }
  ]
}